--- a/package.json
+++ b/package.json
@@ -8,20 +8,32 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "compressorjs": "^1.1.1",
     "heic-convert": "^1.2.4",
+    "jimp": "^0.16.2",
+    "lodash": "^4.17.21",
+    "primereact": "^8.7.3",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-dom": "^18.2.0",
     "react-favicon": "^1.0.1",
     "react-icons": "^4.6.0",
+    "react-image-crop": "^10.0.9",
+    "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.4",
+    "sass": "^1.57.1",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon index.js --ignore client"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +58,5 @@
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2"
   },
-  "proxy": "https://etk12ntpib.execute-api.us-east-1.amazonaws.com/Prod"
+  "proxy": "http://localhost:8080"
 }
